--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -50,3 +50,4 @@ jobs:
           file_pattern: 'bin/ dist/ types/ template/ lib/ client.d.ts theme.d.ts theme-without-fonts.d.ts'
           commit_user_name: Automated Build Bot # defaults to "github-actions[bot]"
           commit_author: Automated Build Bot <actions@github.com>
+          create_branch: true
