feat: update npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vitepress",
+  "name": "@mscpo/vitepress",
   "version": "1.4.1",
   "description": "Vite & Vue powered static site generator",
   "keywords": [
