--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -42,6 +42,6 @@ jobs:
           cache: pnpm
       - run: pnpm install
       - run: pnpm build
-      - uses: publish-with-pnpm
+      - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
