--- a/.github/workflows/cr.yml
+++ b/.github/workflows/cr.yml
@@ -42,6 +42,8 @@ jobs:
           cache: pnpm
       - run: pnpm install
       - run: pnpm build
-      - uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+      - name: Set publishing config
+        run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - run: pnpm publish
