--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mscpo/vitepress",
-  "version": "1.4.1",
+  "version": "1.4.1.MSCPO24-10-14-13-21",
   "description": "Vite & Vue powered static site generator",
   "keywords": [
     "vite",
